# camera_car_ocr

./: .env.example  .gitignore  README.md  docker-compose.yml  verify_orchestrator_startup.py
backend/: Dockerfile  main.py  onec_whitelist_stub.txt  pyproject.toml  start.ps1  start.sh  tmp_fresh_events_check.py
backend/app/: alpr_service.py  api_server.py  barrier.py  camera.py  camera_worker.py  config.py  db.py  decision.py  logging_utils.py  motion_detector.py  normalization.py  onec_provider.py  orchestrator.py  pipeline_state.py  preview_pipeline.py  runtime_state.py  security.py  stages.py  types.py  voting.py  zones.py
backend/tests/: conftest.py  test_api_mode_payload.py  test_camera_management.py  test_camera_scoped_endpoints.py  test_decision_policy.py  test_detection_handling.py  test_event_recording.py  test_frame_id_consistency.py  test_hold_refresh.py  test_onec_provider.py  test_orchestrator_camera_scoping.py  test_supervisor_idle.py  test_two_shot_matcher.py  test_zones_limit.py
data/: app.db-shm  app.db-wal  preview_meta.json
frontend/: .env.example  Dockerfile  README_MVP.md  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  page.tsx
frontend/components/: ConfirmationDialog.tsx  ControlRoomHeader.tsx  DashboardSidebar.tsx  EventsTable.tsx  OnboardingPanel.tsx  PreviewWithZones.tsx  ZonesPanel.tsx  zone-editor.tsx
frontend/hooks/: use-dashboard.ts
frontend/lib/: api.ts  types.ts
